# lardrift

./: CMakeLists.txt  README.md
config/: geometry.json
exe/: CMakeLists.txt  lardrift.cpp
libs/inc/: LinkDef.h  plotter.hh  reader.hh  simarrays.hh  tools.hh
libs/src/: CMakeLists.txt  plotter.cpp  reader.cpp  simarrays.cpp  tools.cpp
